--- a/dox/Test_Cases_SP1/test_case_09.dox
+++ b/dox/Test_Cases_SP1/test_case_09.dox
@@ -196,169 +196,95 @@ wrongOper1	 0009	LABEL
 wrongOper2	 000A	LABEL
 
 Instruction breakdowns:
-original source line: IncorrectSTACK KICKO FC:0;
-Line number: 1 LC: 0000 Label: IncorrectSTACK,
-instruction/Directive: KICKO Binary Equivalent: ------
-Operand 1: FC:0	Binary Equivalent: 0
+LC	Object Code	Address Status	Line Num	Source Line
+(hex)	(hex)	src:, dest:	(dec)
+0000	--------	src: -,dest:-	1	IncorrectSTACK KICKO FC:0;
 
+0000	C4880FFF	src: -,dest:R	2	dmMinM1POP POP DM:-1;
 
-original source line: dmMinM1POP POP DM:-1;
-Line number: 2 LC: 0000 Label: dmMinM1POP,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DM:-1	Binary Equivalent: 11111111111111111111111111111111
-ERROR: 071: Operand `DM' for `POP' instruction/directive must be within range: [0, 4095]
+0001	F4000000	src: -,dest:R	3	dmMaxP1POP POP DM:4096;
+errors:
+ERROR: 071: Operand `DM' for `POP' instruction/directive must be within range: [-4096, 4095]
 
-
-original source line: dmMaxP1POP POP DM:4096;
-Line number: 3 LC: 0001 Label: dmMaxP1POP,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DM:4096	Binary Equivalent: 1000000000000
-ERROR: 071: Operand `DM' for `POP' instruction/directive must be within range: [0, 4095]
-
-
-original source line: dxMinM1POP POP DM:0, DX:0;
-Line number: 4 LC: 0002 Label: dxMinM1POP,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DM:0	Binary Equivalent: 0
-Operand 2: DX:0	Binary Equivalent: 0
+0002	F4000000	src: -,dest:R	4	dxMinM1POP POP DM:0, DX:0;
+errors:
 ERROR: 072: Operand `DX' for `POP' instruction must be within range: [1,7]
 
-
-original source line: dxMaxP1POP POP DM:0, DX:8;
-Line number: 5 LC: 0003 Label: dxMaxP1POP,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DM:0	Binary Equivalent: 0
-Operand 2: DX:8	Binary Equivalent: 1000
+0003	F4000000	src: -,dest:R	5	dxMaxP1POP POP DM:0, DX:8;
+errors:
 ERROR: 072: Operand `DX' for `POP' instruction must be within range: [1,7]
 
-
-original source line: drMinM1POP POP DR:-1;
-Line number: 6 LC: 0004 Label: drMinM1POP,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DR:-1	Binary Equivalent: 11111111111111111111111111111111
+0004	F4000000	src: -,dest:-	6	drMinM1POP POP DR:-1;
+errors:
 ERROR: 074: Operand `DR' for `POP' instruction must be within range: [0,7]
 
-
-original source line: drMaxP1POP POP DR:8;
-Line number: 7 LC: 0005 Label: drMaxP1POP,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DR:8	Binary Equivalent: 1000
+0005	F4000000	src: -,dest:-	7	drMaxP1POP POP DR:8;
+errors:
 ERROR: 074: Operand `DR' for `POP' instruction must be within range: [0,7]
 
-
-original source line: extraOper1 POP DM:0, DX:1, DM:2;
-Line number: 8 LC: 0006 Label: extraOper1,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DM:0	Binary Equivalent: 0
-Operand 2: DX:1	Binary Equivalent: 0
-Operand 3: DM:2	Binary Equivalent: 0
+0006	F4000000	src: -,dest:-	8	extraOper1 POP DM:0, DX:1, DM:2;
+errors:
 ERROR: 049: Too many operands to `POP' instruction.
 
+0007	F4000000	src: -,dest:-	9	extraOper2 POP DM:0, DM:1;
+errors:
+ERROR: 041: Missing `{DM,DX}, {DR}, or {DM}' operand to `POP' instruction
 
-original source line: extraOper2 POP DM:0, DM:1;
-Line number: 9 LC: 0007 Label: extraOper2,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: DM:0	Binary Equivalent: 0
-Operand 2: DM:1	Binary Equivalent: 0
-ERROR: 056: Operand `DM' must be paired with operand `DX' for instruction 'POP'.
-
-
-original source line: noOper	   POP;
-Line number: 10 LC: 0008 Label: noOper,
-instruction/Directive: POP Binary Equivalent: 110001
+0008	C4880000	src: -,dest:-	10	noOper	   POP;
+errors:
 ERROR: 052: Too few operands to `POP' instruction
 
-
-original source line: wrongOper1 POP EX:1+1;s
-Line number: 11 LC: 0009 Label: wrongOper1,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: EX:1+1	Binary Equivalent: 0
+0009	F4000000	src: -,dest:-	11	wrongOper1 POP EX:1+1;s
+errors:
+ERROR: 041: Missing `{DM,DX}, {DR}, or {DM}' operand to `POP' instruction
 ERROR: 046: Operand `EX' is inapplicable for `POP' instruction
 
-
-original source line: wrongOper2 POP FM:2;
-Line number: 12 LC: 000A Label: wrongOper2,
-instruction/Directive: POP Binary Equivalent: 110001
-Operand 1: FM:2	Binary Equivalent: 0
+000A	F4000000	src: -,dest:-	12	wrongOper2 POP FM:2;
+errors:
+ERROR: 041: Missing `{DM,DX}, {DR}, or {DM}' operand to `POP' instruction
 ERROR: 046: Operand `FM' is inapplicable for `POP' instruction
 
+000B	C0880FFF	src: R,dest:-	13	fmMinM1PSH PSH FM:-1;
 
-original source line: fmMinM1PSH PSH FM:-1;
-Line number: 13 LC: 000B Label: fmMinM1PSH,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: FM:-1	Binary Equivalent: 11111111111111111111111111111111
-ERROR: 071: Operand `FM' for `PSH' instruction/directive must be within range: [0, 4095]
+000C	F4000000	src: R,dest:-	14	fmMaxP1PSH PSH FM:4096;
+errors:
+ERROR: 071: Operand `FM' for `PSH' instruction/directive must be within range: [-4096, 4095]
 
+000D	00000030	src: A,dest:-	15	flMinM1PSH PSH FL:-1;
 
-original source line: fmMaxP1PSH PSH FM:4096;
-Line number: 14 LC: 000C Label: fmMaxP1PSH,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: FM:4096	Binary Equivalent: 1000000000000
-ERROR: 071: Operand `FM' for `PSH' instruction/directive must be within range: [0, 4095]
+000E	F4000000	src: A,dest:-	16	flMaxP1PSH PSH FL:4096;
+errors:
+ERROR: 075: Operand `FL' for `PSH' instruction must be within range: [-4096, 4095]
 
+000F	00000030	src: A,dest:-	17	fcMinM1PSH PSH FC:-1;
 
-original source line: flMinM1PSH PSH FL:-1;
-Line number: 15 LC: 000D Label: flMinM1PSH,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: FL:-1	Binary Equivalent: 11111111111111111111111111111111
-ERROR: 075: Operand `FL' for `PSH' instruction must be within range: [0, 4095]
+0010	F4000000	src: A,dest:-	18	fcMaxP1PSH PSH FC:4096;
+errors:
+ERROR: 075: Operand `FC' for `PSH' instruction must be within range: [-4096, 4095]
 
-
-original source line: flMaxP1PSH PSH FL:4096;
-Line number: 16 LC: 000E Label: flMaxP1PSH,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: FL:4096	Binary Equivalent: 1000000000000
-ERROR: 075: Operand `FL' for `PSH' instruction must be within range: [0, 4095]
-
-
-original source line: fcMinM1PSH PSH FC:-1;
-Line number: 17 LC: 000F Label: fcMinM1PSH,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: FC:-1	Binary Equivalent: 11111111111111111111111111111111
-ERROR: 075: Operand `FC' for `PSH' instruction must be within range: [0, 4095]
-
-
-original source line: fcMaxP1PSH PSH FC:4096;
-Line number: 18 LC: 0010 Label: fcMaxP1PSH,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: FC:4096	Binary Equivalent: 1000000000000
-ERROR: 075: Operand `FC' for `PSH' instruction must be within range: [0, 4095]
-
-
-original source line: extraOp    PSH FM:0, FM:0;
-Line number: 19 LC: 0011 Label: extraOp,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: FM:0	Binary Equivalent: 0
-Operand 2: FM:0	Binary Equivalent: 0
+0011	F4000000	src: -,dest:-	19	extraOp    PSH FM:0, FM:0;
+errors:
 ERROR: 049: Too many operands to `PSH' instruction.
 
-
-original source line: noOp	   PSH;
-Line number: 20 LC: 0012 Label: noOp,
-instruction/Directive: PSH Binary Equivalent: 110000
+0012	F4000000	src: -,dest:-	20	noOp	   PSH;
+errors:
 ERROR: 054: Too few operands provided
 
-
-original source line: wrongOp1   PSH EX:1+1;
-Line number: 21 LC: 0013 Label: wrongOp1,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: EX:1+1	Binary Equivalent: 0
+0013	F4000000	src: -,dest:-	21	wrongOp1   PSH EX:1+1;
+errors:
 ERROR: 046: Operand `EX' is inapplicable for `PSH' instruction
 
-
-original source line: wrongOp2   PSH DR:2;
-Line number: 22 LC: 0014 Label: wrongOp2,
-instruction/Directive: PSH Binary Equivalent: 110000
-Operand 1: DR:2	Binary Equivalent: 0
+0014	F4000000	src: -,dest:-	22	wrongOp2   PSH DR:2;
+errors:
 ERROR: 046: Operand `DR' is inapplicable for `PSH' instruction
 
-
-original source line: END LR:IncorrectSTACK, EX:IncorrectEnd1; 
-Line number: 23 LC: 0015 Label: ,
-instruction/Directive: END Binary Equivalent: ------
-Operand 1: LR:IncorrectSTACK	Binary Equivalent: 0
-Operand 2: EX:IncorrectEnd1	Binary Equivalent: 0
+0015	--------	src: -,dest:-	23	END LR:IncorrectSTACK, EX:IncorrectEnd1; 
+errors:
 ERROR: 050: Too many operands to `END' directive
+
 </pre>
+<h1>Object file:</h1>
+<pre><i>The object file could not be generated for this program.</i></pre>
+
 
 */
