--- a/dox/Test_Cases_SP1/test_case_13.dox
+++ b/dox/Test_Cases_SP1/test_case_13.dox
@@ -36,6 +36,8 @@ Instruction breakdowns:
 LC	Object Code	Address Status	Line Num	Source Line
 (hex)	(hex)	src:, dest:	(dec)
 </pre>
+<h1>Object file:</h1>
+<pre><i>The object file could not be generated for this program.</i></pre>
 
 
 */
