--- a/dox/Test_Cases_SP1/test_case_18.dox
+++ b/dox/Test_Cases_SP1/test_case_18.dox
@@ -21,7 +21,7 @@
 <span style="font-style:italic;color:#800080;">x</span>		<span style="font-weight:bold;color:#000080;">num</span>   <span style="color:#0000ff;">FC</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">10</span> <span style="color:#ff0000;">;</span><span style="font-style:italic;color:#a5a5a5;">define data element </span>
 <span style="font-style:italic;color:#800080;">y</span> 		<span style="font-weight:bold;color:#000080;">num</span>   <span style="color:#0000ff;">FC</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">111</span> <span style="color:#ff0000;">;</span><span style="font-style:italic;color:#a5a5a5;">define data element </span>
 <span style="font-style:italic;color:#800080;">z</span>	 	<span style="font-weight:bold;color:#000080;">num</span>   <span style="color:#0000ff;">FC</span><span style="color:#ff0000;">:</span><span style="color:#00e1af;">0</span> <span style="color:#ff0000;">;</span><span style="font-style:italic;color:#a5a5a5;">define data element </span>
-		<span style="font-weight:bold;color:#000080;">END</span>   <span style="color:#0000ff;">LR</span><span style="color:#ff0000;">:</span><span style="font-style:italic;color:#800080;">shiftONCOR</span><span style="color:#ff0000;">;</span><span style="font-style:italic;color:#a5a5a5;">end of program E</span>
+		<span style="font-weight:bold;color:#000080;">END</span>   <span style="color:#0000ff;">LR</span><span style="color:#ff0000;">:</span><span style="font-style:italic;color:#800080;">shiftINCOR</span><span style="color:#ff0000;">;</span><span style="font-style:italic;color:#a5a5a5;">end of program E</span>
 </pre>
 <br />
 <h1>Symbol table</h1>
@@ -68,17 +68,13 @@ z	 0010	LABEL
 Instruction breakdowns:
 LC	Object Code	Address Status	Line Num	Source Line
 (hex)	(hex)	src:, dest:	(dec)
-0000	------------	src: -,dest:-	1	shiftINCOR	KICKO FC:0;
-errors:
+0000	--------	src: -,dest:-	1	shiftINCOR	KICKO FC:0;
 
 0000	0087000E	src: R,dest:-	2			MOVD  DR:7,	FM:x ;place x in register 1 
-errors:
 
 0001	3081000F	src: R,dest:-	3			ISUB  DR:1,	FM:y ;add (x+y) 
-errors:
 
 0002	00180010	src: -,dest:R	4			MOVD  FR:1,	DM:z ;store x+y into z 2 
-errors:
 
 0003	F4000000	src: A,dest:-	5			ROL   FX:1, 	FC:4; 
 errors:
@@ -117,25 +113,20 @@ errors:
 ERROR: 052: Too few operands to `ISHR' instruction
 
 000C	A0810010	src: R,dest:-	14			IWSR  FM:z,	NW:1 ;output z 3 A0008007 R
-errors:
 
 000D	FC000000	src: A,dest:-	15			HLT   FC:0 ;halt program displax code 
-errors:
 
 000E	0000000A	src: A,dest:-	16	x		num   FC:10 ;define data element 
-errors:
 
 000F	0000006F	src: A,dest:-	17	y 		num   FC:111 ;define data element 
-errors:
 
 0010	00000000	src: A,dest:-	18	z	 	num   FC:0 ;define data element 
-errors:
 
-0011	------------	src: -,dest:-	19			END   LR:shiftONCOR;end of program E
-errors:
-ERROR: 113: LR:label must match KICKO label
+0011	--------	src: -,dest:-	19			END   LR:shiftINCOR;end of program E
 
 </pre>
+<h1>Object file:</h1>
+<pre><i>The object file could not be generated for this program.</i></pre>
 
 
 */
