--- a/dox/Test_Cases_SP1/test_case_11.dox
+++ b/dox/Test_Cases_SP1/test_case_11.dox
@@ -42,49 +42,53 @@ start	 0FA0	PROGNAME
 Instruction breakdowns:
 LC	Object Code	Address Status	Line Num	Source Line
 (hex)	(hex)	src:, dest:	(dec)
-0FA0	------------	src: -,dest:-	1	start kicko FC:4000;
-errors:
+0FA0	--------	src: -,dest:-	1	start kicko FC:4000;
 
 0FA0	00080000	src: -,dest:R	2	MOVD FR:0, DM:0;
-errors:
 
 0FA1	00800000	src: R,dest:-	3	MOVD FM:0, DR:0;
-errors:
 
 0FA2	01803FFF	src: A,dest:-	4	MOVD FL:16383, DR:0;
-errors:
 
 0FA3	01893FFF	src: A,dest:-	5	MOVD FL:16383, DX:1;
-errors:
 
 0FA4	00081000	src: -,dest:R	6	MOVD FR:0, DM:0, DX:1;
-errors:
 
 0FA5	00801000	src: R,dest:-	7	MOVD FM:0, FX:1, DR:0;
-errors:
 
 0FA6	00010000	src: -,dest:-	8	MOVD FR:0, DR:1;
-errors:
 
 0FA7	00090000	src: -,dest:-	9	MOVD FR:0, DX:1;
-errors:
 
 0FA8	00900000	src: -,dest:-	10	MOVD FX:1, DR:0;
-errors:
 
 0FA9	009A0000	src: -,dest:-	11	MOVD FX:1, DX:2;
-errors:
 
 0FAA	02001000	src: R,dest:R	12	MOVD FM:1, DM:0;
-errors:
 
 0FAB	031C7000	src: A,dest:R	13	MOVD FL:455, DM:0;
-errors:
 
-0FAC	------------	src: -,dest:-	14	end LR:start;
-errors:
+0FAC	--------	src: -,dest:-	14	end LR:start;
 
 </pre>
+<h1>Object file:</h1>
+<pre>H:start:
+0FA0:0FAC:0000:2012129,16:37:32:0001:URBAN-ASM:start:
+T:0FA0:00080000:R:A:00:00:start:
+T:0FA1:00800000:A:R:00:00:start:
+T:0FA2:01803FFF:A:A:00:00:start:
+T:0FA3:01893FFF:A:A:00:00:start:
+T:0FA4:00081000:R:A:00:00:start:
+T:0FA5:00801000:A:R:00:00:start:
+T:0FA6:00010000:A:A:00:00:start:
+T:0FA7:00090000:A:A:00:00:start:
+T:0FA8:00900000:A:A:00:00:start:
+T:0FA9:009A0000:A:A:00:00:start:
+T:0FAA:02001000:R:R:00:00:start:
+T:0FAB:031C7000:R:A:00:00:start:
+E:0028:0000:000C:001A:start:
+</pre>
+
 
 
 */
