--- a/dox/Test_Cases_SP1/test_case_17.dox
+++ b/dox/Test_Cases_SP1/test_case_17.dox
@@ -71,73 +71,81 @@ z	 0013	LABEL
 Instruction breakdowns:
 LC	Object Code	Address Status	Line Num	Source Line
 (hex)	(hex)	src:, dest:	(dec)
-0000	------------	src: -,dest:-	1	shiftCOR	KICKO FC:0;
-errors:
+0000	--------	src: -,dest:-	1	shiftCOR	KICKO FC:0;
 
 0000	00810011	src: R,dest:-	2			MOVD DR:1,	FM:x ;place x in register 1 
-errors:
 
 0001	30810012	src: R,dest:-	3			ISUB DR:1,	FM:y ;add (x+y) 
-errors:
 
 0002	00180013	src: -,dest:R	4			MOVD FR:1,	DM:z ;store x+y into z 2 
-errors:
 
 0003	61810002	src: A,dest:-	5			ISHR DR:1, 	FC:2 ;
-errors:
 
 0004	65810002	src: A,dest:-	6			ISHL DR:1, 	FC:2 ;
-errors:
 
 0005	71810004	src: A,dest:-	7			ROL  DR:1, 	FC:4; 
-errors:
 
 0006	75810004	src: A,dest:-	8			ROR  DR:1, 	FC:4; 
-errors:
 
 0007	6D810002	src: A,dest:-	9			ISLA DR:1, 	FC:2 ; 
-errors:
 
 0008	69810002	src: A,dest:-	10			ISRA DR:1, 	FC:2 ; 		
-errors:
 
 0009	61890002	src: A,dest:-	11			ISHR DX:1, 	FC:2 ;
-errors:
 
 000A	65890002	src: A,dest:-	12			ISHL DX:1, 	FC:2 ;
-errors:
 
 000B	71890004	src: A,dest:-	13			ROL  DX:1, 	FC:4; 
-errors:
 
 000C	75890004	src: A,dest:-	14			ROR  DX:1, 	FC:4; 
-errors:
 
 000D	6D890002	src: A,dest:-	15			ISLA DX:1, 	FC:2 ; 
-errors:
 
 000E	69890002	src: A,dest:-	16			ISRA DX:1, 	FC:2 ; 
-errors:
 
 000F	A0810013	src: R,dest:-	17			IWSR FM:z,	NW:1 ;
-errors:
 
 0010	FC000000	src: A,dest:-	18			HLT  FC:0 ;halt program displax code 
-errors:
 
 0011	0000000A	src: A,dest:-	19	x		num  FC:10 ;define data element 
-errors:
 
 0012	0000006F	src: A,dest:-	20	y 		num  FC:111 ;define data element 
-errors:
 
 0013	00000000	src: A,dest:-	21	z	 	num  FC:0 ;define data element 
-errors:
 
-0014	------------	src: -,dest:-	22			END  LR:shiftCOR;end of program E
-errors:
+0014	--------	src: -,dest:-	22			END  LR:shiftCOR;end of program E
 
 </pre>
+<h1>Object file:</h1>
+<pre>H:shiftCOR:
+0000:0014:0000:2012129,16:25:39:0001:URBAN-ASM:shiftCOR:
+T:0000:00810011:A:R:00:01:shiftCOR:
+M:0000:+:R:x::S:shiftCOR:
+T:0001:30810012:A:R:00:01:shiftCOR:
+M:0001:+:R:y::S:shiftCOR:
+T:0002:00180013:R:A:01:00:shiftCOR:
+M:0002:+:R:z::S:shiftCOR:
+T:0003:61810002:A:A:00:00:shiftCOR:
+T:0004:65810002:A:A:00:00:shiftCOR:
+T:0005:71810004:A:A:00:00:shiftCOR:
+T:0006:75810004:A:A:00:00:shiftCOR:
+T:0007:6D810002:A:A:00:00:shiftCOR:
+T:0008:69810002:A:A:00:00:shiftCOR:
+T:0009:61890002:A:A:00:00:shiftCOR:
+T:000A:65890002:A:A:00:00:shiftCOR:
+T:000B:71890004:A:A:00:00:shiftCOR:
+T:000C:75890004:A:A:00:00:shiftCOR:
+T:000D:6D890002:A:A:00:00:shiftCOR:
+T:000E:69890002:A:A:00:00:shiftCOR:
+T:000F:A0810013:A:R:00:01:shiftCOR:
+M:000F:+:R:z::S:shiftCOR:
+T:0010:FC000000:A:A:00:00:shiftCOR:
+T:0011:0000000A:A:A:00:00:shiftCOR:
+T:0012:0000006F:A:A:00:00:shiftCOR:
+T:0013:00000000:A:A:00:00:shiftCOR:
+E:003A:0000:0014:0024:shiftCOR:
+</pre>
+
 
 
 
